Adding a new area

--- a/help/races.html
+++ b/help/races.html
@@ -9,11 +9,35 @@
 	<tbody>
 		<tr>
 			<th scope="row">Human</th>
-			<td>Most people are humans. Humans are everywhere, doing everything.</td>
+			<td>Humans have no particular strengths or weaknesses. Humans are everywhere, doing everything.</td>
+		</tr>
+		<tr>
+			<th scope="row" class="red">Fox</th>
+			<td>Foxes are cunning, predatory canines. Their intelligence is high, but they have reduced defense.</td>
+		</tr>
+		<tr>
+			<th scope="row" class="green">Raccoon</th>
+			<td>Raccoons are sneaky bandit-masked tricksters, who are very skillful, but not as strong as other races.</td>
+		</tr>
+		<tr>
+			<th scope="row" class="blue">Owl</th>
+			<td>Owls are large-eyed birds with excellent perception, but their wing-hands gives them less skill.</td>
+		</tr>
+		<tr>
+			<th scope="row">Wolf</th>
+			<td>Wolves are huge canine creatures, the strongest of all races, but their size makes it easier for them to miss small details.</td>
+		</tr>
+		<tr>
+			<th scope="row" class="red">Ox</th>
+			<td>The horned, hooved oxes are the largest race, and do not tire easily. They have a reputation for slow minds, however.</td>
+		</tr>
+		<tr>
+			<th scope="row" class="green">Rabbit</th>
+			<td>Rabbits are small and skillful, with long ears that are always alert. They are less sturdy than most, however.</td>
 		</tr>
 		<tr>
 			<th scope="row" class="blue">Sheep</th>
-			<td>Sheep are terrible and can't do anything right. They just follow the herd.</td>
+			<td>Sheep are nervous wooly horned creatures who's anxiety makes them miss a lot, but they are hardier than they look.</td>
 		</tr>
 	</tbody>
 </table>
