--- a/help/commands.html
+++ b/help/commands.html
@@ -12,6 +12,10 @@
 		<dd>Look closely at something. If you do not give a target the current room is selected.</dd>
 		<dd>Ex: look</dd>
 
+		<dt>Ask [target] [topic]</dt>
+		<dd>Ask an NPC about a topic to get more information.</dd>
+		<dd>Ex: ask villager weather</dd>
+
 		<dt>Score</dt>
 		<dd>Your character stats and affects.</dd>
 
@@ -82,6 +86,10 @@
 		<dt>Move [direction]</dt>
 		<dd>General movement command. The other movement commands are aliases of move.</dd>
 		<dd>Ex: move north</dd>
+
+		<dt>Explore</dt>
+		<dd>Explore the current location to search for secrets.</dd>
+		<dd>Ex: explore</dd>
 
 		<dt>Say</dt>
 		<dd>Send a message to everyone in the current room.</dd>
