--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,29 @@
 		<link href="styles.css" rel="stylesheet" media="all" />
 	</head>
 	<body>
-		<div id="mudwrapper" class="container">
-			<div id="terminal">
-				<div id="mudopen" class="row">
+		<div id="gamewrapper">
+			<div id="mudwrapper" class="container">
+				<div id="terminal">
+					<div id="mudopen" class="row">
+						<div class="col-md-12">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="inputwrapper" class="container">
+				<div class="row">
 					<div class="col-md-12">
-<!-- 						<h1 class="opening-title">RockMUD v0.3.0</h1> -->
+						<form id="console" autocomplete="off">
+							<div class="form-group">
+								<input class="user-input form-control" id="cmd" type="input" value="" placeholder="Enter a character name"/>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="inputwrapper" class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<form id="console" autocomplete="off">
-						<div class="form-group">
-							<input class="user-input form-control" id="cmd" type="input" value="" placeholder="Enter a character name"/>
-						</div>
-					</form>
-				</div>
-			</div>
+		<div id="map">
+			<div id="youarehere"></div>
 		</div>
 		<script src="../socket.io/socket.io.js"></script>
 		<script src="rockmud-client.js"></script>
